tests/baselines/reference/taggedTemplateStringsWithTypedTags.errors.txt
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts(12,1): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts(14,1): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts(16,1): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts(18,1): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts(20,1): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts(22,1): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts(24,1): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts(26,1): error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/templates/taggedTemplateStringsWithTypedTags.ts (8 errors) ====
    interface I {
        (stringParts: string[], ...rest: number[]): I;
        g: I;
        h: I;
        member: I;
        thisIsNotATag(x: string): void
        [x: number]: I;
    }
    
    var f: I;
    
    f `abc`
    ~~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc${1}def${2}ghi`;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc`.member
    ~~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc${1}def${2}ghi`.member;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc`["member"];
    ~~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc${1}def${2}ghi`["member"];
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc`[0].member `abc${1}def${2}ghi`;
    ~~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f `abc${1}def${2}ghi`["member"].member `abc${1}def${2}ghi`;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1159: Tagged templates are only available when targeting ECMAScript 6 and higher.
    
    f.thisIsNotATag(`abc`);
    
    f.thisIsNotATag(`abc${1}def${2}ghi`);
    